# ece410-hw4ai

./: .gitignore  CLAUDE.md  README.md  flake.nix
codefest/cf01/: cman_workload_accounting.md
codefest/cf01/profiling/: main.py  pyproject.toml  resnet18_analysis.md
codefest/cf02/: cman_roofline.md
codefest/cf02/analysis/: ai_calculation.md  partition_rationale.md
codefest/cf02/profiling/: asic_specs.md  project_profile.txt  roofline_notes.md  (+1 more)
codefest/cf03/: cman_dram_traffic.md
codefest/cf04/: cman_quantization.md  cman_quantization.py
codefest/cf05/: cman_systolic_trace.md
project/: .gitignore  heilmeier.md  heilmeier_draft.md  pyproject.toml
project/m1/: interface_selection.md  sw_baseline.md
project/m2/: README.md  precision.md
project/m2/rtl/: interface.sv
project/m2/tb/: Makefile  export_wave.tcl  plot_waveform.py  results.xml  tb_compute_core.sv  tb_interface.sv  tb_snn_lif_bank.sv  tb_snn_lif_cell.sv  tb_snn_mac.sv  tb_snn_mac_array.sv  tb_waveform.sv  test_compute_core.py  test_interface.py  test_precision_sweep.py  test_snn_lif_bank.py  test_snn_lif_cell.py  test_snn_mac.py  test_snn_mac_array.py  waveform.vcd  waveform_sim
project/m2/tb/sim_build/: sim.vvp
project/m2/tb/sim_build_compute_core/: sim.vvp
project/m2/tb/sim_build_interface/: sim.vvp
project/m2/tb/sim_build_lif_bank/: sim.vvp
project/m2/tb/sim_build_lif_cell/: sim.vvp
project/m2/tb/sim_build_mac/: sim.vvp
project/m2/tb/sim_build_mac_array/: sim.vvp
project/m2/tb/sim_build_precision_sweep/: sim.vvp
project/shd_snn/: data.py  model.py  profile.py  train.py
(+15 files in other folders)
